RESOLVED FIXED142730
Potentially uninitialized Inspector values
https://bugs.webkit.org/show_bug.cgi?id=142730
Summary Potentially uninitialized Inspector values
Brent Fulgham
Reported 2015-03-16 10:29:44 PDT
In an effort to locate and resolve some WebInspector crashes I'm seeing on Windows, I wanted to clean up some of the warning MSVC and its analyzer are complaining about. The 'InspectorObjectBase::getInteger' can return false without setting its return value to anything. This leaves arguments in a potentially uninitialized state: source\webcore\inspector\inspectordomagent.cpp(119): warning C4701: potentially uninitialized local variable 'g' used source\webcore\inspector\inspectordomagent.cpp(119): warning C4701: potentially uninitialized local variable 'b' used
Attachments
Patch (1.34 KB, patch)
2015-03-16 10:32 PDT, Brent Fulgham
joepeck: review+
Radar WebKit Bug Importer
Comment 1 2015-03-16 10:30:05 PDT
Brent Fulgham
Comment 2 2015-03-16 10:32:31 PDT
Joseph Pecoraro
Comment 3 2015-03-16 11:20:35 PDT
Comment on attachment 248731 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=248731&action=review r=me > Source/WebCore/inspector/InspectorDOMAgent.cpp:117 > - double a; > + double a = 0; Maybe "1" would be a better default.
Brent Fulgham
Comment 4 2015-03-16 11:22:29 PDT
Comment on attachment 248731 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=248731&action=review >> Source/WebCore/inspector/InspectorDOMAgent.cpp:117 >> + double a = 0; > > Maybe "1" would be a better default. Good point! I'll fix that.
Brent Fulgham
Comment 5 2015-03-16 11:24:25 PDT
Note You need to log in before you can comment on or make changes to this bug.