Potentially uninitialized Inspector values https://bugs.webkit.org/show_bug.cgi?id=142730

Reviewed by Joseph Pecoraro.

* inspector/InspectorDOMAgent.cpp:
(WebCore::parseColor): Make sure color values are given an initial value.


Canonical link: https://commits.webkit.org/160747@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181568 268f45cc-cd09-0410-ab3c-d52691b4dbfc